new changes application  and CorsConfig 4